# AI_Annual_Report_Analyser

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  __init__.py  agents.py  agno_support.py  cli.py  collaborative_memory.py  document_processing.py  enhanced_tools.py  main.py  news_api.py  prompts.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ui.py  search_implementations.py  task_decomposition.py  test_new_workflow.py  tools.py  transformer_tools.py  workflow.py
.devcontainer/: devcontainer.json
annual_report_analysis/: __init__.py
annual_report_analysis/agents/: __init__.py  agno_support.py  memory.py  sub_agents.py
annual_report_analysis/core/: __init__.py  agents.py  config.py  state.py  workflow.py
annual_report_analysis/graph/: __init__.py  state_graph.py  workflow.py
annual_report_analysis/tools/: __init__.py  knowledge_graph.py  tools.py
annual_report_analysis/ui/: app.py
annual_report_analysis/utils/: __init__.py  cli.py  runner.py
scripts/: postinstall.py  pre-commit.py
tests/: conftest.py  test_agents.py  test_core.py  test_tools.py
